--- a/samples/structure-sample-01/EPUB/xhtml/asides.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/asides.xhtml
@@ -11,11 +11,11 @@
 	<body epub:type="bodymatter">
 		<section epub:type="chapter" id="P70004858060006F9">
 			<header>
-				<h1 epub:type="title"><span epub:type="label"><span class="pagebreak" title="5"
-							epub:type="pagebreak" id="P70004858060006FA"></span>Chapter </span><span
-						epub:type="ordinal">2: </span>Asides</h1>
+				<span class="pagebreak" title="5" epub:type="pagebreak" id="P70004858060006FA"></span>
+				<h1 epub:type="title"><span epub:type="label">Chapter</span>
+					<span epub:type="ordinal">2:</span> Asides</h1>
 			</header>
-			<section class="frontmatter" id="d6e2738" aria-label="Chapter front">
+			<section id="d6e2738" aria-label="Chapter front">
 				<p>Asides are block-level supplemental content that may present in a number of ways. They are
 					broken into the following categories:</p>
 				<ul>
@@ -27,10 +27,10 @@
 					<li><p>annotation</p></li>
 				</ul>
 			</section>
-			<section class="bodymatter" id="d6e2772" aria-label="Chapter body">
+			<section id="d6e2772" aria-label="Chapter body">
 				<section id="P70004858060006FB" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">1.1 </span>Sidebars</h3>
+						<h3 epub:type="title"><span epub:type="ordinal">1.1</span> Sidebars</h3>
 					</header>
 					<p>A sidebar is a titled aside that is typically several paragraphs in length and may contain
 						images and media and even small titled sections and a practice section at the end. It is
@@ -40,8 +40,7 @@
 						in addition to a title. </p>
 					<aside class="sidebar" id="P70004858060006FC">
 						<header>
-							<h4 epub:type="title" id="P70004858060006FD"><span epub:type="label">Sidebar
-									label</span><a id="P70004858060006FE"></a>Sidebar title</h4>
+							<h4 epub:type="title" id="P70004858060006FD">Sidebar title</h4>
 						</header>
 						<p>This is sidebar text. This is sidebar texts. This is sidebar text. This is sidebar text. </p>
 						<p>This is sidebar text. This is sidebar text. This is sidebar text. This is sidebar text. </p>
@@ -54,33 +53,12 @@
 							<li><p>Lorem ipsum dolor sit amet, cu quo laudem cetero rationibus, no mei error
 									simul.</p></li>
 						</ul>
-						<p>This is sidebar text. This is sidebar text. This is sidebar text. This is sidebar text. </p>
-						<ol>
-							<li><p>Lorem ipsum dolor sit amet, cu quo laudem cetero rationibus, no mei error
-									simul.</p></li>
-							<li><p>Lorem ipsum dolor sit amet, cu quo laudem cetero rationibus, no mei error
-									simul.</p>
-								<ol>
-									<li><p>Lorem ipsum dolor sit amet, cu quo laudem cetero rationibus, no mei error
-											simul.</p></li>
-									<li><p>Lorem ipsum dolor sit amet, cu quo laudem cetero rationibus, no mei error
-											simul.</p></li>
-									<li><p>Lorem ipsum dolor sit amet, cu quo laudem cetero rationibus, no mei error
-											simul.</p></li>
-								</ol>
-							</li>
-							<li><p>Lorem ipsum dolor sit amet, cu quo laudem cetero rationibus, no mei error
-									simul.</p></li>
-							<li><p>Lorem ipsum dolor sit amet, cu quo laudem cetero rationibus, no mei error
-									simul.</p></li>
-						</ol>
 						<p>This is sidebar text. This is sidebar text. This is a cross reference to <a
-								href="#P70004858060006FF"><span epub:type="label">Table </span><span epub:type="label"
-									>2.1</span></a> in the sidebar text. This is sidebar text. This is sidebar text. </p>
+								href="#P70004858060006FF">Table 1.1</a> in the sidebar text. This is sidebar text.
+							This is sidebar text. </p>
 						<figure class="table" id="P70004858060006FF">
 							<figcaption>
-								<p class="title"><span epub:type="label">Table </span><span epub:type="ordinal">2.1
-									</span>This is the table title</p>
+								<p class="title">Table 1.1 This is the table title</p>
 							</figcaption>
 							<table class="largetable">
 								<thead>
@@ -150,8 +128,8 @@
 						</figure>
 						<section epub:type="practice" id="P7000485806000702">
 							<header>
-								<h5 id="P7000485806000703" epub:type="title"><span epub:type="label">Sidebar Practice
-										Section Label</span></h5>
+								<h5 id="P7000485806000703" epub:type="title">Sidebar Practice
+										Section Label</h5>
 							</header>
 							<ol class="practicelist">
 								<li class="general-problem" id="P7000485806000704"><div epub:type="question"
@@ -186,7 +164,7 @@
 				</section>
 				<section id="P700048580600070C" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">1.2 </span>Footnotes</h3>
+						<h3 epub:type="title">1.2 Footnotes</h3>
 					</header>
 					<p>A footnote is an aside associated with a specific range of text. It is indicated by a marker
 						in the text known as the footnote reference, typically a raised number or symbol. The
@@ -198,8 +176,9 @@
 						them uniquely from other hyperlinks.</p>
 					<p>This is normal body text containing footnote reference.<a class="noteref noteref_footnote"
 							epub:type="noteref" id="r__P700048580600071D" href="#P700048580600071D">1</a> This is
-						normal body text.</p><aside epub:type="footnote" id="P700048580600071D"><p><span
-								epub:type="ordinal"><a href="#r__P700048580600071D">1</a></span> This is footnote
+						normal body text.</p>
+					<aside epub:type="footnote" id="P700048580600071D">
+						<p><a href="#r__P700048580600071D">1</a> This is footnote
 							text. Depending on the reader, the footnote may display in different formats.
 								<span>&lt;footnote in standard browser presents following paragraph containing
 								footnote reference. In EPUB Reading System desired presentation is for footnote to
@@ -207,11 +186,11 @@
 				</section>
 				<section id="P700048580600070D" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">1.3 </span>Endnotes</h3>
+						<h3 epub:type="title">1.3 Endnotes</h3>
 					</header>
 					<section id="P70004858060000000000000002226F6" class="level2">
 						<header>
-							<h4 epub:type="title"><span epub:type="ordinal">1.3.1 </span>Chapter Endnotes</h4>
+							<h4 epub:type="title">1.3.1 Chapter Endnotes</h4>
 						</header>
 						<p>An endnote is an aside associated with a specific range of text. As with the footnote, it
 							is indicated by a marker in the text known as the footnote reference, typically a raised
@@ -238,7 +217,7 @@
 					</section>
 					<section id="P70004858060000000000000001116F6" class="level2">
 						<header>
-							<h4 epub:type="title"><span epub:type="ordinal">1.3.2 </span>Book Endnotes</h4>
+							<h4 epub:type="title">1.3.2 Book Endnotes</h4>
 						</header>
 						<p>Endnotes may also appear in the product backmatter. The example below links to product
 							backmatter endnotes.</p>
@@ -258,7 +237,7 @@
 				</section>
 				<section id="P700048580600070E" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">1.4 </span>Marginalia</h3>
+						<h3 epub:type="title">1.4 Marginalia</h3>
 					</header>
 					<p>Marginalia is an aside that is typically short in length, a single paragraph at most. Unlike
 						a footnote or endnote, there is no visible marginalia reference in the text. Like a foonote,
@@ -297,7 +276,7 @@
 				</section>
 				<section id="P7000485806000713" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">1.5 </span>Pullquote</h3>
+						<h3 epub:type="title">1.5 Pullquote</h3>
 					</header>
 					<p>A pull quote (also known as a lift-out quote) is a quotation or excerpt from an article that
 						is typically placed in a larger or distinctive typeface on the same page/screen, serving to
@@ -314,7 +293,7 @@
 				</section>
 				<section id="P7000485806000716" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">1.5a </span>Annotation</h3>
+						<h3 epub:type="title">1.6 Annotation</h3>
 					</header>
 					<p>An annotation is a block-level note, analysis or commentary that is made regarding the text.
 						It may take the form of notes to the teacher or to the student. A reference to the
@@ -325,38 +304,37 @@
 							href="#P7000485806000718">5</a></p>
 					<aside class="annotation annotation_instructor" epub:type="help" id="P7000485806000717">
 						<header>
-							<h4 epub:type="title"><span epub:type="ordinal">4 </span><span epub:type="label"
-									>Analyze</span></h4>
+							<h4 epub:type="title">4 Analyze</h4>
 						</header>
 						<p>This is the instructor's annotation...</p>
 					</aside>
 					<aside class="annotation" epub:type="help" id="P7000485806000718">
 						<header>
-							<h4 epub:type="title"><span epub:type="ordinal">5 </span><span epub:type="label"
-									>Points</span></h4>
+							<h4 epub:type="title">5
+								Points</h4>
 						</header>
 						<p>This is a regular annotation</p>
 					</aside>
 				</section>
 			</section>
-			<section class="backmatter" id="d6e3272" aria-label="Chapter back">
-				<section epub:type="rearnotes" id="P7000485806000719" class="rearnotes level1">
+			<section id="d6e3272" aria-label="Chapter back">
+				<section id="P7000485806000719" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">1.6 </span>Chapter Endnote List</h3>
+						<h3 epub:type="title">1.7 Chapter Endnote List</h3>
 					</header>
-					<ol class="rearnotelist">
+					<ol epub:type="rearnotes">
 						<li epub:type="rearnote" id="P700048580600071A">
-							<p><span epub:type="ordinal"><a href="#r__P700048580600071A">1</a></span> This is chapter
+							<p><a epub:type="referrer" href="#r__P700048580600071A">1</a> This is chapter
 								endnote text. This is chapter endnote text. This is chapter endnote text. This is
 								chapter endnote text. This is chapter endnote text. </p>
 						</li>
 						<li epub:type="rearnote" id="P700048580600071B">
-							<p><span epub:type="ordinal"><a href="#r__P700048580600071B">2</a></span> This is chapter
+							<p><a epub:type="referrer" href="#r__P700048580600071B">2</a> This is chapter
 								endnote text. This is chapter endnote text. This is chapter endnote text. This is
 								chapter endnote text. This is chapter endnote text. </p>
 						</li>
 						<li epub:type="rearnote" id="P700048580600071C">
-							<p><span epub:type="ordinal"><a href="#r__P700048580600071C">3</a></span> This is chapter
+							<p><a epub:type="referrer" href="#r__P700048580600071C">3</a> This is chapter
 								endnote text. This is chapter endnote text. This is chapter endnote text. This is
 								chapter endnote text. This is chapter endnote text. </p>
 						</li>
