--- a/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
@@ -11,12 +11,12 @@
 	<body class="fixed" epub:type="bodymatter">
 		<section epub:type="chapter" id="P700048580600075C">
 			<header>
-				<h1 epub:type="title"><span epub:type="label"><span class="pagebreak" title="16"
-							epub:type="pagebreak" id="P700048580600075D"></span>Chapter </span><span
-						epub:type="ordinal"> 4: </span> Typical Chapter Frontmatter and Chapter Backmatter Content </h1>
+				<span class="pagebreak" title="16" epub:type="pagebreak" id="P700048580600075D"></span>
+				<h1 epub:type="title"><span epub:type="label">Chapter</span>
+					<span epub:type="ordinal">4:</span> Typical Chapter Frontmatter and Chapter Backmatter Content </h1>
 				<p epub:type="subtitle">Chapter 4 Subtitle</p>
 			</header>
-			<section class="frontmatter" id="d6e5498" aria-label="Chapter front">
+			<section id="d6e5498" aria-label="Chapter front">
 				<div class="blockquotegroup">
 					<blockquote epub:type="epigraph">
 						<p>The purpose of art is not the release of a momentary ejection of adrenaline but is,
@@ -24,11 +24,10 @@
 					</blockquote>
 					<div class="source"><p>Glenn Gould</p></div>
 				</div>
-				<section epub:type="introduction" id="P700048580600075E" class="introduction level1">
+				<section epub:type="introduction" id="P700048580600075E" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.1 </span><span epub:type="label">
-								Introduction Section Label</span><span class="pagebreak" title="17"
-								epub:type="pagebreak" id="P700048580600075F"></span></h3>
+						<span class="pagebreak" title="17" epub:type="pagebreak" id="P700048580600075F"></span>
+						<h3 epub:type="title">4.1 Introduction Section Label</h3>
 					</header>
 					<p>Text in the part or chapter frontmatter that provides a narrative introduction to the part
 						or chapter bodymatter content to follow. Distinct from the toc, objectiveset, and
@@ -39,10 +38,9 @@
 					<p>This is body text. This is body text. This is body text. This is body text. This is body
 						text. This is body text. </p>
 				</section>
-				<section epub:type="learning-objectives" id="P7000485806000760" class="objectiveset level1">
+				<section epub:type="learning-objectives" id="P7000485806000760" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.2 </span><span epub:type="label">Learning
-								Objectives Section Label</span></h3>
+						<h3 epub:type="title">4.2 Learning Objectives Section Label</h3>
 					</header>
 					<ol class="objectivelist">
 						<li class="objective" epub:type="learning-objective" id="P7000485806000761"><p>This
@@ -57,8 +55,7 @@
 				</section>
 				<section epub:type="case-study" id="P7000485806000766">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.3 </span><span epub:type="label">Case
-								Study </span>Case Study Title </h3>
+						<h3 epub:type="title">4.3 Case Study Case Study Title </h3>
 					</header>
 					<p>A case is a section in the main narrative that does not float but is typically visually set
 						off from the running text.</p>
@@ -70,10 +67,10 @@
 						study text. This is case study text. </p>
 				</section>
 			</section>
-			<section class="bodymatter" id="d6e5625" aria-label="Chapter body">
+			<section id="d6e5625" aria-label="Chapter body">
 				<section id="d6e5627" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.4 </span>Section Heading</h3>
+						<h3 epub:type="title">4.4 Section Heading</h3>
 					</header>
 					<p>This is regular body text in chapter bodymatter. This is regular body text in chapter
 						bodymatter. This is regular body text in chapter bodymatter.</p>
@@ -81,8 +78,7 @@
 						bodymatter. This is regular body text in chapter bodymatter.</p>
 					<section class="example" id="d6e5641">
 						<header>
-							<h4 epub:type="title"><span epub:type="ordinal">4.4.1 </span><span epub:type="label"
-									>Example </span><span epub:type="ordinal">1 </span></h4>
+							<h4 epub:type="title">4.4.1 Example 1</h4>
 						</header>
 						<p>An example is a container for presenting "examples" of things, such as programlistings,
 							worked problems, essays, or whatever thing the author is discussing.</p>
@@ -95,10 +91,8 @@
 					</section>
 					<section class="feature" id="P7000485806000767">
 						<header>
-							<h4 epub:type="title"><span epub:type="ordinal">4.4.2 </span><span epub:type="label"
-									>Feature Section</span>
-								<span class="pagebreak" title="18" epub:type="pagebreak" id="P7000485806000768"
-								></span>
+							<h4 epub:type="title">4.4.2 Feature Section <span class="pagebreak" title="18"
+									epub:type="pagebreak" id="P7000485806000768"></span>
 							</h4>
 						</header>
 						<p>A feature is a section in the main narrative that does not float but is typically
@@ -124,8 +118,7 @@
 				</section>
 				<section class="feature" id="P700048580600076A">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.5A </span><span epub:type="label">Feature
-								Section at different level</span></h3>
+						<h3 epub:type="title">4.5A Feature Section at different level</h3>
 					</header>
 					<p>A feature is a section in the main narrative that does not float but is typically visually
 						set off from the running text. It should format the same regardless of nesting level within
@@ -150,7 +143,7 @@
 				</section>
 				<section id="d6e5727" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.6 </span>Blockquotes</h3>
+						<h3 epub:type="title">4.6 Blockquotes</h3>
 					</header>
 					<p>This is regular body text in chapter bodymatter. This is regular body text in chapter
 						bodymatter. This is regular body text in chapter bodymatter.</p>
@@ -180,7 +173,7 @@
 				</section>
 				<section id="d6e5771" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.7 </span>Poem</h3>
+						<h3 epub:type="title">4.7 Poem</h3>
 					</header>
 					<div class="poem">
 						<div class="linegroup">
@@ -208,8 +201,8 @@
 				</section>
 				<section id="P700048580600076D" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.8 </span><img class="inline" width="28"
-								height="13" src="../images/study.jpg" alt="" />Misc Other Structures</h3>
+						<h3 epub:type="title">4.8 <img class="inline" width="28" height="13"
+								src="../images/study.jpg" alt="" />Misc Other Structures</h3>
 					</header>
 					<section id="P700048580600076E" class="level2">
 						<header>
@@ -328,8 +321,7 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 				</section>
 				<section id="P7000485806000774" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.9 </span><span epub:type="label"
-								>Misc</span></h3>
+						<h3 epub:type="title">4.9 Misc</h3>
 					</header>
 					<p>Numbered equation using MathML</p>
 					<div class="equation">
@@ -364,8 +356,7 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 			<section class="backmatter" id="d6e6104" aria-label="Chapter back">
 				<section epub:type="conclusion" id="P7000485806000775" class="conclusion level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.9a </span><span epub:type="label"
-								>Conclusion Section</span></h3>
+						<h3 epub:type="title">4.10 Conclusion Section</h3>
 					</header>
 					<p>Container for summary of key points of chapter.</p>
 					<p>Now that you have studied this chapter, you can do the following:</p>
@@ -424,15 +415,15 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 							conclusion text. This is conclusion text. </p>
 					</section>
 				</section>
-				<section id="P7000485806000777" class="level1">
+				<section epub:type="answers" id="P7000485806000777" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.10 </span> Answers </h3>
+						<h3 epub:type="title">4.11 Answers</h3>
 					</header>
 					<p>answerlist is an orderedlist that contains answers to questions posed in assessment
 						sections.</p>
 					<p>Current model is for answers to link back to questions but upcoming spec change may reverse
 						this order such that questions link to answers.</p>
-					<ol class="answerlist">
+					<ol>
 						<li epub:type="answer" id="P70004858060006EB">
 							<p>Answer text should render as lowercase alpha due to hardcoding of type="a".</p></li>
 						<li epub:type="answer" id="P70004858060006EC"><p>Answer text should render as lowercase
@@ -445,12 +436,11 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 					<p>Note that the sublist is not setting on same line as top-level answerlist (i.e., 26.1 sets
 						on line of its own). Current CSS is not expecting a listitem to contain a number whose only
 						content is a nested list</p>
-					<section id="P70004858060006EF" class="answersetdiv level2">
+					<section epub:type="answers" id="P70004858060006EF" class="level2">
 						<header>
-							<h4 epub:type="title"><span epub:type="ordinal">4.10.1 </span>Nested Answersetdiv Section
-							</h4>
+							<h4 epub:type="title">4.11.1 Nested Answersetdiv Section </h4>
 						</header>
-						<ol class="answerlist">
+						<ol class="dynamiclist">
 							<li><p>This is answerlist text in a nested section. This is answerlist text in a nested
 									section.</p></li>
 							<li><p>This is answerlist text in a nested section. This is answerlist text in a nested
@@ -461,44 +451,42 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 									section.</p></li>
 						</ol>
 					</section>
-					<section id="P70004858060006F0" class="answersetdiv level2">
+					<section epub:type="answers" id="P70004858060006F0" class="level2">
 						<header>
-							<h4 epub:type="title"><span epub:type="ordinal">4.10.2 </span>Nested Answersetdiv Section
-							</h4>
+							<h4 epub:type="title">4.11.2 Nested Answersetdiv Section </h4>
 						</header>
-						<ol class="answerlist dynamiclist">
-							<li><p><span epub:type="ordinal">1.1 </span>This is answerlist text in a nested section.
-									This is answerlist text in a nested section.</p></li>
-							<li><p><span epub:type="ordinal">1.2 </span>This is answerlist text in a nested section.
-									This is answerlist text in a nested section.</p></li>
-							<li><p><span epub:type="ordinal">1.3 </span>This is answerlist text in a nested section.
-									This is answerlist text in a nested section.</p></li>
+						<ol class="dynamiclist">
+							<li><p>1.1 This is answerlist text in a nested section. This is answerlist text in a
+									nested section.</p></li>
+							<li><p>1.2 This is answerlist text in a nested section. This is answerlist text in a
+									nested section.</p></li>
+							<li><p>1.3 This is answerlist text in a nested section. This is answerlist text in a
+									nested section.</p></li>
 						</ol>
 					</section>
 				</section>
 				<section epub:type="practice" id="P7000485806000778" class="level1">
 					<header>
-						<h3 epub:type="title" id="P7000485806000779"><span epub:type="ordinal">4.11 </span><span
-								epub:type="label">Exercises</span></h3>
+						<h3 epub:type="title" id="P7000485806000779">4.12 Exercises</h3>
 					</header>
 					<p>A container for assessment content, including optional title group, introductory text,
 						instructions, and problems.</p>
 					<div class="instructions"><p>These are instructions for the assessment section. These are
 							instructions for the assessment section.</p></div>
 					<ol class="practicelist">
-						<li class="general-problem" id="P70004858060006DE"><div epub:type="question"
-								id="P70004858060006DF">
+						<li id="P70004858060006DE">
+							<div epub:type="question" id="P70004858060006DF">
 								<p><a href="#P70004858060006EB">This is a general-problem that is auto-numbered by
 										reading system. This links to answer 1 in answerlist later in chapter. </a></p>
 							</div>
 						</li>
-						<li class="tf-problem" epub:type="true-false-problem" id="P70004858060006E0"><div
-								epub:type="question" id="P70004858060006E1">
+						<li epub:type="true-false-problem" id="P70004858060006E0">
+							<div epub:type="question" id="P70004858060006E1">
 								<p><a href="#P70004858060006EC">This is a general-problem that is auto-numbered by
 										reading system. This links to answer 1 in answerlist later in chapter.</a></p>
 							</div>
 						</li>
-						<li class="fb-problem" epub:type="fill-in-the-blank-problem" id="P70004858060006E2"><div
+						<li epub:type="fill-in-the-blank-problem" id="P70004858060006E2"><div
 								epub:type="question" id="P70004858060006E3">
 								<p><a href="#P70004858060006ED">This is a general-problem that is auto-numbered by
 										reading system. This links to answer 1 in answerlist later in chapter.</a></p>
@@ -516,12 +504,12 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 							</div>
 						</li>
 					</ol>
-					<section id="P7000485806001456" class="practicediv level2">
+					<section epub:type="practices" id="P7000485806001456" class="level2">
 						<header>
-							<h4 epub:type="title"><span epub:type="ordinal">4.11.1 </span>Practice Subsection</h4>
+							<h4 epub:type="title">4.12.1 Practice Subsection</h4>
 						</header>
-						<ol class="practicelist">
-							<li class="general-problem"><p>This is a general-problem that is auto-numbered by reading
+						<ol>
+							<li epub:type="general-problem"><p>This is a general-problem that is auto-numbered by reading
 									system appearing in a nested subsection</p></li>
 							<li epub:type="match-problem" id="P70004858060006E6">
 								<div epub:type="question"><table>
@@ -542,7 +530,7 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 				</section>
 				<section id="P700048580600077A" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.12 </span> Keywords </h3>
+						<h3 epub:type="title">4.13 Keywords </h3>
 					</header>
 					<p>Keywordset is a container of the list of keywords used in the chapter. Keywords in the
 						keyword list link back to keywords in the body text. Keywords in body text in turn map to
@@ -564,13 +552,12 @@ This text is marked as pre and <kbd>this text</kbd> is marked as kbd.
 					</ol>
 					<p>The keywords above should render as bold and with design icon. Clicking on each keyword in
 						keylist will resolve to keyword in body text example in <a
-							href="name-index.xhtml#P70004858060007CF"><span epub:type="label">Chapter </span><span
-								epub:type="ordinal">4</span></a>.</p>
+							href="name-index.xhtml#P70004858060007CF">Chapter 4</a>.</p>
 				</section>
 				<section id="P700048580600077B" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">4.13 </span> Title </h3><p
-							epub:type="subtitle">Subtitle text subtitle text</p>
+						<h3 epub:type="title">4.14 Title</h3>
+						<p epub:type="subtitle">Subtitle text subtitle text</p>
 					</header>
 					<p>This is horizontal rule</p>
 					<hr />
