--- a/samples/structure-sample-01/EPUB/xhtml/figures-tables.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/figures-tables.xhtml
@@ -11,14 +11,14 @@
 	<body class="fixed" epub:type="bodymatter">
 		<section epub:type="chapter" id="P700048580600071E">
 			<header>
-				<h1 epub:type="title"><span class="pagebreak" title="7" epub:type="pagebreak"
-						id="P700048580600071F"></span><span epub:type="label">Chapter </span><span
-						epub:type="ordinal">2: </span>Figures and Tables</h1>
+				<span class="pagebreak" title="7" epub:type="pagebreak" id="P700048580600071F"></span>
+				<h1 epub:type="title"><span epub:type="label">Chapter</span>
+					<span epub:type="ordinal">2:</span> Figures and Tables</h1>
 			</header>
-			<section class="bodymatter" id="d6e3325" aria-label="Chapter body">
+			<section id="d6e3325" aria-label="Chapter body">
 				<section id="P7000485806000720" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">2.1 </span>Figure</h3>
+						<h3 epub:type="title">2.1 Figure</h3>
 					</header>
 					<p>An illustration, diagram, photo, etc, that is typically referenced from the main flow of the
 						document and that can, without affecting the flow of the document, be moved away from that
@@ -28,8 +28,7 @@
 					<figure class="figure" id="P7000485806000721">
 						<img alt="alternative text" width="705" height="399" src="../images/fxvii-01.png" />
 						<figcaption>
-							<p><span epub:type="label">Figure </span><span epub:type="ordinal">3.1 </span>Figure
-								Title </p>
+							<p epub:type="title">Figure 3.1 Figure Title</p>
 							<div class="caption"><p>This is caption text. This is caption text. This is caption text.
 									This is caption text. This is caption text. This is caption text. This is caption
 									text. This is caption text.</p></div>
@@ -39,7 +38,7 @@
 				</section>
 				<section id="P7000485806000722" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">2.2 </span>Informalfigure</h3>
+						<h3 epub:type="title">2.2 Informalfigure</h3>
 					</header>
 					<p>informalfigure is a class of figure that floats, is not referenced in the text, is usually a
 						photograph, and is un-numbered.</p>
@@ -130,7 +129,7 @@
 				</section>
 				<section id="P7000485806000725" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">2.3 </span>Inline Figure</h3>
+						<h3 epub:type="title">2.3 Inline Figure</h3>
 					</header>
 					<p>inline is a special class of figure that is required to be placed inline with running text,
 						is always titled or captioned, is a graphic, and is not labeled or numbered. When a graphic
@@ -141,8 +140,7 @@
 				</section>
 				<section id="P7000485806000726" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">2.4 </span>Chapter or Part Opening
-							Figure</h3>
+						<h3 epub:type="title">2.4 Chapter or Part Opening Figure</h3>
 					</header>
 					<p>opener is a class of figure that is used as part or chapter opening art. Opening art is
 						often specially positioned relative to a design. It does not arbitrarily float, nor is it
@@ -155,7 +153,7 @@
 				</section>
 				<section id="P7000485806000728" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">2.5 </span>Figure containing a Table</h3>
+						<h3 epub:type="title">2.5 Figure containing a Table</h3>
 					</header>
 					<p>When a table can float away from its main content without affecting flow or understanding of
 						that content, table must be nested in figure with class="table". when table is nested inside
@@ -163,8 +161,7 @@
 						figure</p>
 					<figure class="table" id="P7000485806000729">
 						<figcaption>
-							<p class="title"><span epub:type="label">Table </span><span epub:type="ordinal">2.1
-								</span>Table Title</p>
+							<p class="title">Table 2.1 Table Title</p>
 						</figcaption>
 						<table>
 							<tbody>
@@ -189,8 +186,7 @@
 					</figure>
 					<figure class="table" id="P700048580600072A">
 						<figcaption>
-							<p class="title"><span epub:type="label">Table </span><span epub:type="ordinal">3.2
-								</span>Kirton Adaption-Innovation Inventory</p>
+							<p class="title">Table 3.2 Kirton Adaption-Innovation Inventory</p>
 							<div class="caption">
 								<p>The following questions are about your style of work behavior (e.g., decision
 									making) in your organization. Please respond to the question based on your
@@ -210,10 +206,10 @@
 									<td colspan="6">
 										<div class="source">
 											<p><span class="pagebreak" title="8" epub:type="pagebreak"
-													id="P700048580600072C"></span><span epub:type="label">Source:
-												</span>Monavvarrian, A. 2004. Administrative reform and style of work
-												behavior: Adaptors-innovators, <cite>Public Organization Review: A Global
-													Journal</cite> 2: 141–164.</p>
+													id="P700048580600072C"></span>Source: Monavvarrian, A. 2004.
+												Administrative reform and style of work behavior: Adaptors-innovators,
+													<cite>Public Organization Review: A Global Journal</cite> 2:
+												141–164.</p>
 										</div>
 									</td>
 								</tr>
@@ -489,7 +485,7 @@
 				</section>
 				<section id="P700048580600072D" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">2.6 </span>Informaltable</h3>
+						<h3 epub:type="title">2.6 Informaltable</h3>
 					</header>
 					<p>An informaltable is a table that must be set inline to the running text. It is typically
 						un-numbered.</p>
@@ -734,7 +730,7 @@
 				</section>
 				<section id="P7000485806000730" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">2.7 </span>Image</h3>
+						<h3 epub:type="title">2.7 Image</h3>
 					</header>
 					<p>An inline image with no caption is simply coded as image</p>
 					<section class="procedure" id="d6e4875" aria-label="procedure">
